hphp/test/zend/good/ext/tokenizer/tests/token_get_all_variation12.php.skipif
<?php if (!extension_loaded("tokenizer")) print "skip"; ?>