hphp/test/zend/bad/ext/pdo/tests/pdo_035.php.skipif
<?php
if (!extension_loaded('pdo_sqlite')) die ("skip Need PDO_SQlite support");
?>